--- a/proyecto-frontend/src/translations/ca/index.json
+++ b/proyecto-frontend/src/translations/ca/index.json
@@ -41,7 +41,7 @@
         },
         "card": {
             "l3": "Programa Formatiu de Competències tecnològiques en Intel·ligència Artificial & Machine Learning amb Python (+500 hores) - Fundació Esplai - Setembre de 2023",
-            "l3_1": "Introducció a la programació (HTML, CSS, JavaScript...)",
+            "l3_1": "Desenvolupament Web: HTML, CSS, JavaScript, React...",
             "l3_2": "Intel·ligència Artificial & Machine Learning amb Python",
             "pdf": "Baixar PDF"
         }
