--- a/proyecto-frontend/src/translations/en/index.json
+++ b/proyecto-frontend/src/translations/en/index.json
@@ -41,7 +41,7 @@
         },
         "card": {
             "l3": "Technological Competences Training Program in Artificial Intelligence & Machine Learning with Python (+500 hours) - Fundació Esplai - September 2023",
-            "l3_1": "Introduction to programming (HTML, CSS, JavaScript...)",
+            "l3_1": "Web Development: HTML, CSS, JavaScript, React...",
             "l3_2": "Artificial Inteligence & Machine Learning with Python",
             "pdf": "Download PDF"
         }
