--- a/proyecto-frontend/src/translations/es/index.json
+++ b/proyecto-frontend/src/translations/es/index.json
@@ -41,7 +41,7 @@
         },
         "card": {
             "l3": "Programa Formativo de Competencias tecnológicas en Inteligencia Artificial & Machine Learning con Python (+500 horas) - Fundació Esplai - Septiembre de 2023",
-            "l3_1": "Introducción a la programación (HTML, CSS, JavaScript...)",
+            "l3_1": "Desarrollo Web: HTML, CSS, JavaScript, React...",
             "l3_2": "Inteligencia Artificial & Machine Learning con Python",
             "pdf": "Descargar PDF"
         }
