--- a/proyecto-frontend/src/translations/ca/index.json
+++ b/proyecto-frontend/src/translations/ca/index.json
@@ -51,7 +51,7 @@
         "t1": "Explotació de Dades:",
         "t2": "Bases de Dades:",
         "t3": "ETL i Gestió de les Dades:",
-        "t4": "Frontend:",
+        "t4": "Desenvolupament Web:",
         "t5": "Big Data, Cloud i GitHub:"
     },
     "projects": {
