--- a/proyecto-frontend/src/translations/en/index.json
+++ b/proyecto-frontend/src/translations/en/index.json
@@ -51,7 +51,7 @@
         "t1": "Data Mining:",
         "t2": "Databases:",
         "t3": "ETL and Data Managment:",
-        "t4": "Frontend:",
+        "t4": "Web Development:",
         "t5": "Big Data, Cloud and GitHub:"
     },
     "projects": {
