--- a/proyecto-frontend/src/translations/es/index.json
+++ b/proyecto-frontend/src/translations/es/index.json
@@ -51,7 +51,7 @@
         "t1": "Explotación de Datos:",
         "t2": "Bases de Datos:",
         "t3": "ETL y Gestión del Dato:",
-        "t4": "Frontend:",
+        "t4": "Desarrollo Web:",
         "t5": "Big Data, Cloud y GitHub:"
     },
     "projects": {
